--- a/Week 03 - Data Preprocessing.ipynb
+++ b/Week 03 - Data Preprocessing.ipynb
@@ -946,7 +946,7 @@
     }
    ],
    "source": [
-    "B.interpolate()  # by default, method='linear' and limit_direction='foward'"
+    "B.interpolate()  # by default, method='linear' and limit_direction='forward'"
    ]
   },
   {
