--- a/Week 03 - Data Preprocessing.ipynb
+++ b/Week 03 - Data Preprocessing.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "Data preprocessing encompasses tasks involved with the cleaning, transformation, reduction, and discretization of data, with the objective of producing data that is more useful for and representative of the problem we are trying to solve. Common tasks that may be applied during data preprocessing include filling in or imputing missing values, smoothing and binning data, removing outliers, sampling values, and normalizing and standardizing data.\n",
     "\n",
-    "In this notebook, we will look at how we can use `matplotlib`, `NumPy`, `pandas`, and `scikit-learn` to help us preprocess data with Python."
+    "In this notebook, we will look at how we can use `Matplotlib`, `NumPy`, `pandas`, and `scikit-learn` to help us preprocess data with Python."
    ]
   },
   {
