Adding activity from week 4

--- a/Week 04 - [In-Class Activity 1] Exploring the Movielens Dataset Some More.ipynb
+++ b/Week 04 - [In-Class Activity 1] Exploring the Movielens Dataset Some More.ipynb
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color='red'>The actual class-activity ↓</font>"
+    "# The actual class-activity ↓"
    ]
   },
   {
@@ -484,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='green'>Find out how many times each genre was rated</font>"
+    "### Find out how many times each genre was rated"
    ]
   },
   {
@@ -529,7 +529,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='green'>How many ratings do we have for \"Film-Noir\" movies ?</font>"
+    "### How many ratings do we have for \"Film-Noir\" movies ?"
    ]
   },
   {
@@ -557,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='green'>Which users have the most/least ratings? What is the average rating for the top/bottom 5?</font>"
+    "### Which users have the most/least ratings? What is the average rating for the top/bottom 5?"
    ]
   },
   {
@@ -732,7 +732,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='green'>Draw a histogram of the ratings</font>"
+    "### Draw a histogram of the ratings"
    ]
   },
   {
@@ -833,7 +833,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='green'>Draw a boxplot of the ratings split by genre</font>"
+    "### Draw a boxplot of the ratings split by genre"
    ]
   },
   {
@@ -860,7 +860,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='green'>Use the provided dictionaries to replace the age/occupation codes with the actual values they represent</font>"
+    "### Use the provided dictionaries to replace the age/occupation codes with the actual values they represent"
    ]
   },
   {
@@ -1014,7 +1014,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='green'>Now draw a boxplot of the ratings by occupation. Warning: This dataset is boring.</font>"
+    "### Now draw a boxplot of the ratings by occupation. Warning: This dataset is boring."
    ]
   },
   {
@@ -1041,7 +1041,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='green'> Hmmm... How many people below the age of 18 are \"retired\" ?   ¯\\\\_(ツ)_/¯ </font>"
+    "###  Hmmm... How many people below the age of 18 are \"retired\" ?   ¯\\\\_(ツ)_/¯ "
    ]
   },
   {
@@ -1201,7 +1201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='green'> What movie genres are most popular among programmers? How do they rate each genre?</font>"
+    "###  What movie genres are most popular among programmers? How do they rate each genre?"
    ]
   },
   {
@@ -1370,7 +1370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='green'> What movies are most popular among farmers? </font>"
+    "###  What movies are most popular among farmers? "
    ]
   },
   {
@@ -1491,7 +1491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='green'> Create a table with the mean ratings for each genre for each occupation. Hint: pivot tables </font>"
+    "###  Create a table with the mean ratings for each genre for each occupation. Hint: pivot tables "
    ]
   },
   {
@@ -2157,7 +2157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='green'> Apply a style to this table that would help highlight the lowest rated genre for each occupation </font>"
+    "###  Apply a style to this table that would help highlight the lowest rated genre for each occupation "
    ]
   },
   {
@@ -3224,7 +3224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='green'> Apply a heatmap style to this table that would help highlight low/high ratings </font>"
+    "###  Apply a heatmap style to this table that would help highlight low/high ratings "
    ]
   },
   {
@@ -4475,7 +4475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='green'>Which movies do men and women most disagree on? </font>\n",
+    "### Which movies do men and women most disagree on? \n",
     "#### Source: http://www.gregreda.com/2013/10/26/using-pandas-on-the-movielens-dataset/"
    ]
   },
