Update Week 02 - [Assignment 1] Movie Rating.ipynb

--- a/Week 02 - [Assignment 1] Movie Rating.ipynb
+++ b/Week 02 - [Assignment 1] Movie Rating.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Extrated (and slightly modified) from *Python for Data Analysis (Wes McKinney)*"
+    "#### Based on example from *Python for Data Analysis (Wes McKinney)*"
    ]
   },
   {
