--- a/Week 02 - [Assignment 1] Movie Rating.ipynb
+++ b/Week 02 - [Assignment 1] Movie Rating.ipynb
@@ -11,21 +11,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Based on example from *Python for Data Analysis (Wes McKinney)*"
+    "#### Based on an example from *Python for Data Analysis (Wes McKinney)*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This dataset contains 1 million ratings collected from 6000 users on 4000 movies, and it is organized into three tables:\n",
+    "This dataset contains 1 million ratings collected from 6,000 users on 4,000 movies, and it is organized into three tables:\n",
     "\n",
     "\n",
     "*   Ratings\n",
     "*   Users\n",
     "*   Movie information\n",
     "\n",
-    "Each table is available as a separate file, each containing a series of rows where columns are separated by *::*\n",
+    "Each table is available as a separate file, each containing a series of rows where columns are separated by two colons (*::*).\n",
     "\n",
     "\n",
     "[Download the dataset here](http://files.grouplens.org/datasets/movielens/ml-1m.zip)\n",
